--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
         function goToNextPage() {
             // Redirect to the local file
-            window.location.href = "file:///C:/Users/hardi/Desktop/aaa/sadhana.html";
+            window.location.href = "sadhana.html";
         }
     </script>
 </body>
