--- a/sadhana.html
+++ b/sadhana.html
@@ -165,7 +165,7 @@
 
         function goToNextPage() {
             // Redirect to the local file
-            window.location.href = "file:///C:/Users/hardi/Desktop/aaa/sdone2.html";
+            window.location.href = "sdone2.html";
         }
     </script>
 </body>
